Refactor and add introspection of JDK application class loader.